# AnyFramework

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/: Config.cmake.in
examples/: CMakeLists.txt
examples/AssetImportExample/: CMakeLists.txt
examples/AssetImportExample/src/: main.cpp
examples/FactoryExample/: CMakeLists.txt
examples/FactoryExample/src/: main.cpp
examples/GUIExample/: CMakeLists.txt
examples/GUIExample/src/: main.cpp
examples/GraphicsExample/: CMakeLists.txt
examples/GraphicsExample/src/: main.cpp
examples/ImageLoadExample/: CMakeLists.txt
examples/ImageLoadExample/src/: main.cpp
examples/ParseExample/: CMakeLists.txt
examples/ParseExample/src/: main.cpp
plugins/: CMakeLists.txt  plugin.cmake
plugins/Assimp/: CMakeLists.txt
plugins/Assimp/src/: AssetImporter.cpp  AssetImporter.h  AssimpScene.cpp  AssimpScene.h  Plugin.cpp
plugins/ExamplePlugin/: CMakeLists.txt
plugins/ExamplePlugin/src/: Plugin.cpp
plugins/GLFW/: CMakeLists.txt
plugins/GLFW/src/: GLFWInterface.cpp  GLFWInterface.h  GLFWWindow.cpp  GLFWWindow.h  Plugin.cpp
plugins/NanoGUI/: CMakeLists.txt
plugins/NanoGUI/src/: NanoGUIInterface.cpp  NanoGUIInterface.h  NanoGUIScreen.cpp  NanoGUIScreen.h  NanoGUIWidget.cpp  NanoGUIWidget.h  Plugin.cpp
plugins/NanoGUI/src/impl/: NanoGUIWidgets.hpp
plugins/OpenGL/: CMakeLists.txt
plugins/OpenGL/src/: OpenGLHeaders.h  OpenGLInterface.cpp  OpenGLInterface.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  Plugin.cpp
plugins/OpenGL/src/impl/: OpenGLMethods.hpp
plugins/RapidJSON/: CMakeLists.txt
plugins/RapidJSON/src/: Plugin.cpp
plugins/RapidXML/: CMakeLists.txt
plugins/RapidXML/src/: Plugin.cpp
plugins/SOIL/: CMakeLists.txt
plugins/SOIL/patch/: CMakeLists.txt
plugins/SOIL/src/: Plugin.cpp
src/: CMakeLists.txt
src/factory/: AnyItemFactory.h  TypeGroupFactory.cpp  TypeGroupFactory.h
src/object/: Callback.h  Function.h  Object.h
src/plugin/: FactoryAPI.h  IVPlugin.h  IVPluginManager.cpp  IVPluginManager.h
src/system/: Profiler.h  System.cpp  System.h  Timer.h
src/utilities/: FileHelpers.cpp  FileHelpers.h  Timestamp.h
